--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -73,6 +73,7 @@
         filter: invert(100%);
         @media (max-width: 1024px) {
           height: 45px;
+          filter: unset;
         }
       }
     }
